src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int cv_recoverPose_2(void* E, void* points1, void* points2, void* R, void* t, double focal, void* pp, void* mask);
extern "C" __declspec(dllexport) int cv_recoverPose_3(void* E, void* points1, void* points2, void* cameraMatrix, void* R, void* t, double distanceThresh, void* mask, void* triangulatedPoints);
extern "C" __declspec(dllexport) void cv_computeCorrespondEpilines_0(void* points, int whichImage, void* F, void* lines);
extern "C" __declspec(dllexport) void cv_triangulatePoints_0(void* projMatr1, void* projMatr2, void* projPoints1, void* projPoints2, void* points4D);
extern "C" __declspec(dllexport) void cv_correctMatches_0(void* F, void* points1, void* points2, void* newPoints1, void* newPoints2);
extern "C" __declspec(dllexport) double cv_sampsonDistance_0(void* pt1, void* pt2, void* F);
extern "C" __declspec(dllexport) bool cv_estimateAffine3D_0(void* src, void* dst, void* out, void* inliers, double ransacThreshold, double confidence);
extern "C" __declspec(dllexport) void* cv_estimateAffine3D_1(void* src, void* dst, void* scale, bool force_rotation);
extern "C" __declspec(dllexport) bool cv_estimateTranslation3D_0(void* src, void* dst, void* out, void* inliers, double ransacThreshold, double confidence);
extern "C" __declspec(dllexport) void* cv_estimateAffine2D_0(void* from, void* to, void* inliers, int method, double ransacReprojThreshold, size_t maxIters, double confidence, size_t refineIters);
extern "C" __declspec(dllexport) void* cv_estimateAffine2D_1(void* pts1, void* pts2, void* inliers, void* params);
extern "C" __declspec(dllexport) void* cv_estimateAffinePartial2D_0(void* from, void* to, void* inliers, int method, double ransacReprojThreshold, size_t maxIters, double confidence, size_t refineIters);
extern "C" __declspec(dllexport) void* cv_estimateTranslation2D_0(void* from, void* to, void* inliers, int method, double ransacReprojThreshold, size_t maxIters, double confidence, size_t refineIters);
extern "C" __declspec(dllexport) int cv_decomposeHomographyMat_0(void* H, void* K, void* rotations, void* translations, void* normals);
extern "C" __declspec(dllexport) void cv_filterHomographyDecompByVisibleRefpoints_0(void* rotations, void* normals, void* beforePoints, void* afterPoints, void* possibleSolutions, void* pointsMask);
extern "C" __declspec(dllexport) void cv_calibrationMatrixValues_0(void* cameraMatrix, cv::Size imageSize, double apertureWidth, double apertureHeight, double fovx, double fovy, double focalLength, void* principalPoint, double aspectRatio);
extern "C" __declspec(dllexport) void* cv_getDefaultNewCameraMatrix_0(void* cameraMatrix, cv::Size imgsize, bool centerPrincipalPoint);
extern "C" __declspec(dllexport) void* cv_getOptimalNewCameraMatrix_0(void* cameraMatrix, void* distCoeffs, cv::Size imageSize, double alpha, cv::Size newImgSize, void* validPixROI, bool centerPrincipalPoint);
extern "C" __declspec(dllexport) void cv_undistortPoints_0(void* src, void* dst, void* cameraMatrix, void* distCoeffs, void* R, void* P, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) void cv_undistortImagePoints_0(void* src, void* dst, void* cameraMatrix, void* distCoeffs, cv::TermCriteria arg1);
extern "C" __declspec(dllexport) void cv_fisheye_projectPoints_0(void* objectPoints, void* imagePoints, void* rvec, void* tvec, void* K, void* D, double alpha, void* jacobian);
extern "C" __declspec(dllexport) void cv_fisheye_distortPoints_0(void* undistorted, void* distorted, void* K, void* D, double alpha);
extern "C" __declspec(dllexport) void cv_fisheye_distortPoints_1(void* undistorted, void* distorted, void* Kundistorted, void* K, void* D, double alpha);
extern "C" __declspec(dllexport) void cv_fisheye_undistortPoints_0(void* distorted, void* undistorted, void* K, void* D, void* R, void* P, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) void cv_fisheye_estimateNewCameraMatrixForUndistortRectify_0(void* K, void* D, cv::Size image_size, void* R, void* P, double balance, cv::Size new_size, double fov_scale);
extern "C" __declspec(dllexport) bool cv_fisheye_solvePnP_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, bool useExtrinsicGuess, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) bool cv_fisheye_solvePnPRansac_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, bool useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, void* inliers, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) bool cv_buildMST_0(int numNodes, void* inputEdges, void* resultingEdges, int algorithm, int root);