src/OpenCV5Sharp/Generated/NativeMethods.Geometry.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_recoverPose_2(MatHandle E, MatHandle points1, MatHandle points2, MatHandle R, MatHandle t, double focal, IntPtr pp, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_recoverPose_3(MatHandle E, MatHandle points1, MatHandle points2, MatHandle cameraMatrix, MatHandle R, MatHandle t, double distanceThresh, IntPtr mask, IntPtr triangulatedPoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_computeCorrespondEpilines_0(MatHandle points, int whichImage, MatHandle F, MatHandle lines);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_triangulatePoints_0(MatHandle projMatr1, MatHandle projMatr2, MatHandle projPoints1, MatHandle projPoints2, MatHandle points4D);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_correctMatches_0(MatHandle F, MatHandle points1, MatHandle points2, MatHandle newPoints1, MatHandle newPoints2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_sampsonDistance_0(MatHandle pt1, MatHandle pt2, MatHandle F);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_estimateAffine3D_0(MatHandle src, MatHandle dst, MatHandle @out, MatHandle inliers, double ransacThreshold, double confidence);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_estimateAffine3D_1(MatHandle src, MatHandle dst, IntPtr scale, [MarshalAs(UnmanagedType.U1)] bool force_rotation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_estimateTranslation3D_0(MatHandle src, MatHandle dst, MatHandle @out, MatHandle inliers, double ransacThreshold, double confidence);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_estimateAffine2D_0(MatHandle from, MatHandle to, IntPtr inliers, int method, double ransacReprojThreshold, long maxIters, double confidence, long refineIters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_estimateAffine2D_1(MatHandle pts1, MatHandle pts2, MatHandle inliers, UsacParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_estimateAffinePartial2D_0(MatHandle from, MatHandle to, IntPtr inliers, int method, double ransacReprojThreshold, long maxIters, double confidence, long refineIters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_estimateTranslation2D_0(MatHandle from, MatHandle to, IntPtr inliers, int method, double ransacReprojThreshold, long maxIters, double confidence, long refineIters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_decomposeHomographyMat_0(MatHandle H, MatHandle K, IntPtr rotations, IntPtr translations, IntPtr normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_filterHomographyDecompByVisibleRefpoints_0(IntPtr rotations, IntPtr normals, MatHandle beforePoints, MatHandle afterPoints, MatHandle possibleSolutions, IntPtr pointsMask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_calibrationMatrixValues_0(MatHandle cameraMatrix, Size imageSize, double apertureWidth, double apertureHeight, double fovx, double fovy, double focalLength, IntPtr principalPoint, double aspectRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getDefaultNewCameraMatrix_0(MatHandle cameraMatrix, Size imgsize, [MarshalAs(UnmanagedType.U1)] bool centerPrincipalPoint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getOptimalNewCameraMatrix_0(MatHandle cameraMatrix, MatHandle distCoeffs, Size imageSize, double alpha, Size newImgSize, IntPtr validPixROI, [MarshalAs(UnmanagedType.U1)] bool centerPrincipalPoint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_undistortPoints_0(MatHandle src, MatHandle dst, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr R, IntPtr P, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_undistortImagePoints_0(MatHandle src, MatHandle dst, MatHandle cameraMatrix, MatHandle distCoeffs, TermCriteria arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_projectPoints_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle rvec, MatHandle tvec, MatHandle K, MatHandle D, double alpha, IntPtr jacobian);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_distortPoints_0(MatHandle undistorted, MatHandle distorted, MatHandle K, MatHandle D, double alpha);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_distortPoints_1(MatHandle undistorted, MatHandle distorted, MatHandle Kundistorted, MatHandle K, MatHandle D, double alpha);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_undistortPoints_0(MatHandle distorted, MatHandle undistorted, MatHandle K, MatHandle D, IntPtr R, IntPtr P, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_estimateNewCameraMatrixForUndistortRectify_0(MatHandle K, MatHandle D, Size image_size, MatHandle R, MatHandle P, double balance, Size new_size, double fov_scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_fisheye_solvePnP_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, [MarshalAs(UnmanagedType.U1)] bool useExtrinsicGuess, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_fisheye_solvePnPRansac_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, [MarshalAs(UnmanagedType.U1)] bool useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, IntPtr inliers, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_buildMST_0(int numNodes, IntPtr inputEdges, IntPtr resultingEdges, int algorithm, int root);
    }
}
